# GaussJacobiQuad

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  NEWS.md  RELEASE.md  cog.toml  environment.yml  fpm.toml  meson.build  readme.org  tbump.toml  towncrier.toml
.github/workflows/: build_docs.yml  build_test.yml  commit-lint.yml  commit_lint.yml  release.yml
apidocs/: Doxygen-GaussJacobiQuad.cfg
app/: gjp_quad.f90  gjp_quad_alg665.f90  gjp_quad_algo665.f90  gjp_quad_gw.f90  gjp_quad_rec.f90
docs/: release.md
interfaces/: GaussJacobiQuadCInterp.h  c_cli_gjpq.c
interfaces/CInterface/: GaussJacobiQuadCInterp.c  GaussJacobiQuadCInterp.h  c_cli_gjpq.c
interfaces/PyInterface/: .f2py_f2cmap  gjquad_cli.py  gjquadpy.pyf
newsfragments/: +c_interop.feature  +gw_algo.feature  +py_interop.feature  +pytest_sympy.misc  +scipy_cli.feature  +sympy_cli.feature  10.feature.md  32.misc.md  7.algo665.feature.md  8.doc  README.md
pytests/: test_gjp_rec.py
scripts/: addExportedHeaders.sh  addHeaders.sh  add_headers.py  export_header.txt  export_single.py  gen_analytic_vals.py  scipy_gauss_jac.py  set_version.sh  sympy_gauss_jac.py
src/: GaussJacobiQuad.f90  GaussJacobiQuadCCompat.f90  gjp_algo665.f90  gjp_common.f90  gjp_constants.f90  gjp_gst.f90  gjp_gw.f90  gjp_imtqlx.f90  gjp_lapack.f90  gjp_rec.f90  gjp_types.f90
test/: test_simple_rec.f90
